master: add .gitignore, update CategoryRepository to use getAllCategories instead of findAll, add @NonNull annotations, and replace collect(Collectors.toList()) with toList()